--- a/CHANGELOG.org
+++ b/CHANGELOG.org
@@ -1,5 +1,9 @@
 * Berns Changelog
 
+** 3.1.3
+
+Replace calls to =calloc= with =strdup("")=, which seems more correct.
+
 ** 3.1.2
 
 Fix two potential off-by-one errors when calculating string length.
