--- a/CHANGELOG.org
+++ b/CHANGELOG.org
@@ -1,5 +1,10 @@
 * Berns Changelog
 
+** 3.1.4
+
+Stop passing pointers to Ruby's Hash values. I'm not sure that this was ever a
+good idea.
+
 ** 3.1.3
 
 Replace calls to =calloc= with =strdup("")=, which seems more correct.
