--- a/CHANGELOG.org
+++ b/CHANGELOG.org
@@ -1,5 +1,9 @@
 * Berns changelog
 
+** 4.1.1
+
+Rightsize the allocated memory from hash_value_to_attribute before returning.
+
 ** 4.1.0
 
 Instances of the =Berns::Builder= class can now be =#call='ed multiple times,
