--- a/CHANGELOG.org
+++ b/CHANGELOG.org
@@ -1,5 +1,9 @@
 * Berns changelog
 
+** 4.1.2
+
+Fix a memory leak in =void_element=.
+
 ** 4.1.1
 
 Rightsize the allocated memory from hash_value_to_attribute before returning.
